Fixed duplicate identifiers Fixed creative mode tab lang

--- a/src/main/resources/assets/moltenobsidiantools/lang/en_us.json
+++ b/src/main/resources/assets/moltenobsidiantools/lang/en_us.json
@@ -28,5 +28,5 @@
   "upgrade.moltenobsidiantools.reinforced_upgrade": "Reinforced Upgrade",
 
 
-  "itemgroup.moltenObsidianTools": "Molten Obsidian Tools"
+  "itemGroup.moltenobsidiantools.molten_tab": "Molten Obsidian Tools"
 }
